# tetos

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: api.md  conf.py  index.md
src/tetos/: __init__.py  __main__.py  azure.py  baidu.py  base.py  camb.py  consts.py  edge.py  fish.py  google.py  minimax.py  openai.py  volc.py  xunfei.py
src/unitts/: __main__.py  azure.py  consts.py  edge.py  openai.py  volc.py
tests/: test_speakers.py
