[project]
name = "tetos"
description = "Unified interface for multiple Text-to-Speech (TTS) providers"
authors = [
    {name = "Frost Ming", email = "me@frostming.com"},
]
dependencies = [
    "edge-tts>=6.1.10",
    "openai>=1.20.0",
    "mutagen>=1.47.0",
    "azure-cognitiveservices-speech>=1.37.0",
    "anyio>=4.3.0",
    "click>=8.1.7",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}
dynamic = ["version"]

keywords = ["tts", "text-to-speech", "speech", "audio", "ai", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/frostming/tetos"

[project.scripts]
tetos = "tetos.__main__:tts"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
]
